# otus_homework_4

./: CMakeLists.txt  README.md  main.cpp  version.h.in
.github/workflows/: release.yml
